--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,67 @@
     width: 100%;
 }
 body{
-    background-color: #212121;
+    background-color: #E9D5CA;
+    width: 100%;
 }
+
+.custom-radio {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #D8E0F0;
+    border-radius: 50%;
+    padding: 4px;
+    background-color: #FFFFFF;
+    cursor: pointer;
+    position: relative;
+  }
+.custom-radio:checked{
+    border: 1px solid #00ADE7;
+}
+  
+  .custom-radio:checked::before {
+    content: '';
+    display: block;
+    width: 8px;
+    height: 8px;
+    background-color: #00ADE7;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .radio-label {
+    color: #0A1629;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    transition: all 0.3s;
+  }
+  
+  .custom-radio:checked + .radio-label {
+    font-weight: 600;
+  }
+  
+  select {
+    color: #7D8592; 
+  }
+  
+  select option:checked {
+    color: #000000;
+  }
+  input[type="checkbox"]:checked + label .unchecked-svg {
+    display: none;
+  }
+  
+  input[type="checkbox"]:checked + label .checked-svg {
+    display: block;
+  }
+  
+  input[type="checkbox"] + label .checked-svg {
+    display: none;
+  }
+  
